Add endpoints for getting/setting documents, save documents in a separate table
